# usbrelay-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs  usbrelay.rs
