[package]
name = "usbrelay-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
enum-repr = "0.2.6"
hidapi-rusb = "1.3.2"
log = "0.4.17"
simple_logger = { version = "4.0.0", features = ["stderr"] }
